Fixed home button overlap

--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -35,7 +35,6 @@ li {
 
 a:link, a:visited {
     display: block;
-    width: 9em;
     color: #FFFFFF;
     text-align: center;
     padding-left: 12%;
